# AI-driven-Mineral-Prospectivity-Mapping-for-Cu-in-Northern-Territory

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
gis_env/: pyvenv.cfg
notebooks/: 02_geology_analyse.ipynb  Analyse Result.ipynb  (+3 more)
nt_copper_prospectivity_repo/nt-copper-prospectivity-kobold-style/: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
nt_copper_prospectivity_repo/nt-copper-prospectivity-kobold-style/.github/workflows/: ci.yml
nt_copper_prospectivity_repo/nt-copper-prospectivity-kobold-style/notebooks/: 01_topology_analyse.ipynb  03_geophysics_analyse.ipynb  05_geochemistry_analyse.ipynb  README.md  set_all_data_into_grid.ipynb  shap_global.ipynb
nt_copper_prospectivity_repo/nt-copper-prospectivity-kobold-style/src/nt_cu_prospectivity/: cli.py  config.py  logging.py
nt_copper_prospectivity_repo/nt-copper-prospectivity-kobold-style/src/nt_cu_prospectivity/explain/: shap_local.py
nt_copper_prospectivity_repo/nt-copper-prospectivity-kobold-style/src/nt_cu_prospectivity/features/: geology.py  grid.py
nt_copper_prospectivity_repo/nt-copper-prospectivity-kobold-style/src/nt_cu_prospectivity/labels/: label_grid.py  ozmin.py
nt_copper_prospectivity_repo/nt-copper-prospectivity-kobold-style/src/nt_cu_prospectivity/models/: io.py  metrics.py  pu_ensemble.py
nt_copper_prospectivity_repo/nt-copper-prospectivity-kobold-style/src/nt_cu_prospectivity/utils/: io.py  vector.py
nt_copper_prospectivity_repo/nt-copper-prospectivity-kobold-style/src/nt_cu_prospectivity/viz/: mapping.py
(+16 files in other folders)
